Fix login going behind keys

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -167,6 +167,15 @@ input {
     margin: 5px 0;
 }
 
+#login-dialog {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height:100%;
+    width: 100%;
+    z-index: 9999;
+}
+
 input:disabled {
     background-color: rgba(0, 0, 0, 0.5);
     border: 1px solid black;
